--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -525,6 +525,14 @@ th {
 .glyphicon-step-forward:before {
   content: "\e077";
 }
+.emailForm {
+border:1px solid grey;
+border-radius:10px;
+margin-top:20px;
+}
+form {
+padding-bottom:20px;
+}
 .glyphicon-eject:before {
   content: "\e078";
 }
